<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="alcohal_desc">Under the act of Licensing Act 1964, it is an offence for any person under the age of 18 years to buy, or attempt to by, intoxicating liquor, or for any person over the age of 18 to buy intoxicating liquor for or on behalf of any person under the age of 18.</string>
    <string name="terms_and_condition">Terms And Conditions</string>
    <string name="app_name">Aminah Tandoori</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_back">Back</string>
    <string name="title_activity_profile_activity">Profile_activity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_delivery_information">DeliveryInformationActivity</string>
    <string name="title_activity_delivery__conformation">Delivery_ConfirmationActivity</string>
    <string name="order_conformation">You will soon recieve confirmation message with your order number </string>
    <string name="title_activity_activity_favorite">ActivityFavorite</string>
    <string name="allergy">Please be advised that some of the food items are prepared with or contain nuts and dairy products. Therefore you shall speak to us prior to placing order in-case you have any allergies.</string>
    <string name="privacy">Any Customer Information that is collected is only for the purpose of processing the order. This information is considered and kept confidential and is not shared. If you need us to remove any of your personal information you have to do so in writing. And we shall remove all the information that you have requested us to remove within 72 hours of time of you making this request.</string>
    <string name="refund">We do not refund any orders, unless the food items are either damaged during transit and deliver. Any or All demands of refund are need to be made instantly by calling/phoning the takeaway so that the damaged food item can either be replaced or full refund provided. When a refund is demanded we will endeavor to have the full amount placed back in to your account within 7-10 days from the day the refund is requested. If any orders are placed using credit/debit card payment are rejected by the takeaway the amount will be refunded back into your account.</string>
    <string name="delivery">Any or All food will be delivered within 45 Minutes or in time specified at the time of placing the order. We endeavor to deliver the food in specified time but sometimes it is unattainable to deliver the food due to factors that are beyond our control (busy periods, inappropriate weather, related to traffic or absence and sickness of staffs). However all collection orders will be made ready for collection within or exact time specified.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="gcm_SenderId">230633287836</string>
</resources>